[project]
name = "glm_saga"
version = "0.1.2a"
authors = [
    { name = "Eric Wong", email = "wongeric@mit.edu"},
]
description = "A PyTorch solver for elastic net."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "sparse-machine-learning",
]
classifiers = [
    "License :: MIT",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/madrylab/glm_saga"

[tool.ruff]
line-length = 120
target-version = "py313"
lint.extend-select = [
    "A",
    "ARG", 
    "B",
    "C4",
    "D",
    "ERA",
    "F",
    "G",
    "I",
    "ISC",
    "ICN",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "RSE",
    "S",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.ignore = [
    "ARG002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D205",
    "D206",
    "ISC001",
    "N818",
    "N812",
    "RUF012",
    "S101",
    "TRY003",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "auto_tutorials_source/*",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
include = ["*/bayes_guess/*"]
omit = ["*/tests/*", "*/datasets/*"]

[tool.coverage.report]
exclude_lines = ["coverage: ignore", "raise NotImplementedError"]
ignore_errors = true

[tool.maturin]
module-name = "bayes_guess.rust_classifier"
features = ["pyo3/extension-module"]
profile = "release"
lto = "thin"
jemalloc = true
rustc-args = ["-C", "target-cpu=native"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
